# archimate-rdf-xml-adapter

./: .gitattributes  .gitignore  README.md  pyproject.toml
ontology/: adapter-core.ttl
tests/: cleanup_named_graphs.py  test_application_collaboration_interaction_batch.py  test_application_function_realization.py  test_application_interface_composition.py  test_application_process_event_business_object_batch.py  test_assert_canonical_graph_integrity.py  test_assert_canonical_graph_integrity_business_process_assignment.py  test_business_collaboration_interaction_batch.py  test_business_completion_batch.py  test_business_function_service_and_role_assignment.py  test_business_role_assignment.py  test_export_canonical_rdf_to_xml.py  test_export_canonical_rdf_to_xml_application_service_realization.py  test_export_canonical_rdf_to_xml_business_process_assignment.py  test_export_canonical_rdf_to_xml_data_object_access.py  test_graphdb_per_file_import_integration.py  test_graphdb_per_file_import_integration_keep_graphs.py  test_import_xml_to_canonical_rdf.py  test_import_xml_to_canonical_rdf_application_service_realization.py  test_import_xml_to_canonical_rdf_business_process_assignment.py  test_import_xml_to_canonical_rdf_data_object_access.py  test_import_xml_to_canonical_rdf_service.py  test_roundtrip_supported_phase1_types.py  test_update_inserts_triple_into_named_graph.py  test_xml_parser.py  test_xml_parser_application_service_realization.py  test_xml_parser_business_process_assignment.py  test_xml_parser_data_object_access.py  test_xml_to_rdf.py  (+3 more)
(+43 files in other folders)
