[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archimate-rdf-xml-adapter"
version = "0.1.0"
dependencies = [
  "requests>=2.32",
  "PyYAML>=6.0",
  "pytest>=9.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a running GraphDB instance",
]